# furiosa-env-tools

./: MODEL_COMPILATION_GUIDE.md  README.md  compile_for_furiosa.py  compile_llama_furiosa.py  download_model.py  prepare_compilation.py  pyproject.toml
src/furiosa_env/: __init__.py  cli.py
src/furiosa_uv_setup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
